--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -16,9 +16,9 @@
 
     function tabChange(options) {
         var element = top.layui.element;
-        var lay_id = 'tab_' + options.id;
+        var lay_id = 'tab_' + options.id + options.title;
         // 如果存在选项卡，切换，否则创建
-        if ($('[lay-id="tab_' + options.id + '"]').length > 0) {
+        if ($('[lay-id="' + lay_id + '"]', top.document).length > 0) {
             element.tabChange('mainTabs', lay_id);
         } else {
             // 创建
