--- a/src/main/resources/vm/manage/projectInfo.vm
+++ b/src/main/resources/vm/manage/projectInfo.vm
@@ -50,10 +50,13 @@
             height: 'full-52',
             even: true,
             cols: [[
-                {field: 'id', title: '项目名称'},
-                {title: '运行状态', width: '10%', templet: "#status_templ"},
-                {field: 'createTime', title: '创建时间', width: '15%'},
-                {field: 'modifyTime', title: '修改时间', width: '15%'},
+                {field: 'id', title: '项目名称', width: '15%'},
+                {field: 'runLibDesc', title: '运行lib', width: '10%'},
+                {field: 'useLibDesc', title: '文件lib', width: '10%'},
+
+                {field: 'createTime', title: '创建时间', width: '13%'},
+                {field: 'modifyTime', title: '修改时间', width: '13%'},
+                {title: '运行状态', templet: "#status_templ", width: '10%'},
                 {field: 'op', title: '操作', toolbar: '#bar_projects'}
             ]],
             loading: true,
