--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -16,20 +16,23 @@
 
     function tabChange(options) {
         var element = top.layui.element;
-        var lay_id = 'tab_' + options.id + options.title;
-        // 如果存在选项卡，切换，否则创建
-        if ($('[lay-id="' + lay_id + '"]', top.document).length > 0) {
-            element.tabChange('mainTabs', lay_id);
-        } else {
-            // 创建
-            var tab_content = '<iframe src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
-            element.tabAdd('mainTabs', {
-                title: options.title,
-                content: tab_content,
-                id: lay_id
-            });
-            // 创建完后切换
-            element.tabChange('mainTabs', lay_id);
+        var lay_id = 'tab_' + options.id;
+        if (options.id != "welcome") {
+            lay_id += options.title;
+            // 如果存在选项卡，切换，否则创建
+            if ($('[lay-id="' + lay_id + '"]', top.document).length > 0) {
+                element.tabChange('mainTabs', lay_id);
+            } else {
+                // 创建
+                var tab_content = '<iframe src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
+                element.tabAdd('mainTabs', {
+                    title: options.title,
+                    content: tab_content,
+                    id: lay_id
+                });
+            }
         }
+        // 创建完后切换
+        element.tabChange('mainTabs', lay_id);
     }
 </script>
