添加项目名称字段 去掉tag字段

--- a/src/main/resources/vm/login.vm
+++ b/src/main/resources/vm/login.vm
@@ -79,7 +79,7 @@
                     } else {
                         $("input[name='hidden']").focus();
                         console.log("focus")
-                        layer.alert(data.msg);
+                        layer.msg(data.msg);
                     }
                 },
                 error: function (err) {
